--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,17 +4,17 @@
   <title>TinyApp</title>
 </head>
 <% include ./partials/_header %>
-<body>
-  <h2>List of URL and their shortened forms.</h2>
-  <ul id='url-list'>
-    <% for(var i in urls) {%>
-    <li><%=  i %> - <%= urls[i]  %></li>
-    <form method="POST" action='/urls/<%= i%>'><a href="/urls/<%= i%>">Edit</a>
-    <form method="POST" action='/urls/<%= i%>/delete'><button type="delete">Delete</button></form>
-
-    <%};%>
-  </ul>
-<a href="https://www.google.ca/">Link for shortening a new URL</a>
-</body>
+  <body>
+    <h2>List of URL and their shortened forms.</h2>
+    <ul id='url-list'>
+      <% for(var i in urls) {%>
+      <li><%=  Object.keys(urls[i]) %> - <%= urls[i][Object.keys(urls[i])]  %></li>
+      <form method="POST" action='/urls/<%= Object.keys(urls[i])%>'><a href="/urls/<%= Object.keys(urls[i])%>">Edit</a></form>
+      <form method="POST" action='/urls/<%= Object.keys(urls[i])%>/delete'><button type="delete">Delete</button>
+      </form>
+      <%};%>
+    </ul>
+    <a href="http://localhost:8080/urls/new">Link for shortening a new URL</a>
+  </body>
 </html>
 
